Fixed bug #10057 - Advanced Search Window is Cramped and Confusing.

--- a/var/httpd/htdocs/skins/Agent/default/css/Core.Default.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Core.Default.css
@@ -757,6 +757,16 @@ iframe.TextOption.Customer {
     max-height: 100px;
 }
 
+#SearchForm,
+#AgentCustomerInformationCenterSearchForm > legend{
+    color: #333333;
+    padding-left: 20px;
+}
+
+.LegendSeparator{
+    border-top: 1px solid #ccc;
+}
+
 /**
  * @subsection global message format
  */
